# roleSP

./: .dockerignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  env.example  eventos.db  eventos.py  frontend.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run  start_all.sh  stop_all.sh  test_api.py
docs/: ARCHITECTURE.md
eventos/: __init__.py  eventos.db
eventos/app/: __init__.py  config.py  main.py  utils.py
eventos/app/models/: __init__.py  database.py  evento.py  user.py
eventos/app/routers/: auth.py  eventos.py  ia.py  scraping.py
eventos/app/scraping/: __init__.py  base.py  exemplo.py  manager.py
eventos/app/services/: __init__.py  auth.py  ia.py
eventos/frontend/: .streamlit.pid  README.md  app.py  requirements.txt
eventos/tests/: conftest.py  test_api.py  test_ia.py  test_main.py  test_models.py  test_scraping.py
roleSP/: __init__.py  main.py
tests/: test_main.py
