[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eventos"
version = "1.0.0"
description = "Plataforma de eventos com IA - busca, filtra, resume e exibe eventos de diversas fontes"
authors = [
    {name = "Leandro", email = "leandro@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "psycopg2-binary>=2.9.7",
    "fastapi-users[sqlmodel]>=12.1.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.40.0",
    "selectolax>=0.3.17",
    "httpx>=0.25.0",
    "ollama>=0.1.7",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
]

[project.scripts]
eventos = "eventos.app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eventos*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
